Add autofill rules and subcategory support

--- a/nav.html
+++ b/nav.html
@@ -6,6 +6,7 @@
   <a href="diy.html">DIY</a>
   <a href="work.html">Work</a>
   <a href="spending.html">Spending</a>
+  <a href="finance.html">Finance</a>
 </nav>
 <style>
   .main-nav {
