--- a/finance.html
+++ b/finance.html
@@ -1093,10 +1093,14 @@ function parseFile(file, accountType, accountName){
   if(ext === 'csv') reader.readAsText(file); else reader.readAsBinaryString(file);
 }
 
-window.addEventListener('DOMContentLoaded', loadFinance);
-document.getElementById('tab-upload').addEventListener('click',()=>showTab('upload'));
-document.getElementById('tab-code').addEventListener('click',()=>showTab('code'));
-document.getElementById('tab-budgets').addEventListener('click',()=>showTab('budgets'));
+window.addEventListener('DOMContentLoaded', () => {
+  loadFinance();
+  document.querySelector('.tabs').addEventListener('click', e => {
+    if (e.target.id === 'tab-upload') showTab('upload');
+    else if (e.target.id === 'tab-code') showTab('code');
+    else if (e.target.id === 'tab-budgets') showTab('budgets');
+  });
+});
 document.getElementById('add-account').addEventListener('click', () => {
   const name = document.getElementById('new-account').value.trim();
   if(!name || financeData.accounts.includes(name)) return;
