--- a/work.html
+++ b/work.html
@@ -56,7 +56,7 @@ section { padding:1rem; }
 .form-grid label{ display:flex; flex-direction:column; font-size:0.9rem; font-weight:bold; }
 .form-grid input,.form-grid select{ width:100%; font-size:1rem; padding:0.4rem; margin-top:0.3rem; box-sizing:border-box; font-weight:normal; }
 .hidden{ display:none !important; }
-#taskHeader.task-header,.task-row{ display:grid; grid-template-columns:3fr 1fr 1fr 1fr 150px; gap:0.25rem; align-items:center; }
+#taskHeader.task-header,.task-row{ display:grid; grid-template-columns:3fr 1fr 1fr 1fr 180px; gap:0.25rem; align-items:center; }
 .task-row {
   background: var(--color-surface) !important; /* Match page background */
   border: 1px solid var(--color-border);
@@ -328,7 +328,7 @@ section { padding:1rem; }
 @media (max-width: 600px) {
   html { font-size: 14px; }
   /* Ensure 5 consistent columns and visible cells on mobile */
-  #taskHeader.task-header, .task-row { grid-template-columns: 3fr 1fr 1fr 1fr 150px; }
+  #taskHeader.task-header, .task-row { grid-template-columns: 3fr 1fr 1fr 1fr 180px; }
   #taskSection #taskHeader.task-header,
   #taskSection .task-row {
     grid-template-columns: 2fr 0.9fr 0.9fr 0.9fr 1.1fr; /* Task, Due, Importance, Urgency, Actions */
@@ -1044,9 +1044,16 @@ function renderTasks(){
     const impDiv=document.createElement('div'); impDiv.textContent=t.importance;
     const urgDiv=document.createElement('div'); urgDiv.textContent=t.urgency; urgDiv.className=urgencyClass(t.urgency);
 
-    // Actions column (includes Complete, Edit, Add Subtask, Delete)
+  // Actions column (includes Add to Today, Complete, Edit, Add Subtask, Delete)
     const actionsCell=document.createElement('div');
     actionsCell.className='task-actions';
+
+  // Add to Today button (purple plus)
+  const addTodayBtn=document.createElement('button');
+  addTodayBtn.className='task-icon-btn';
+  addTodayBtn.title='Add to Today';
+  addTodayBtn.innerHTML='<svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="10" cy="10" r="8" fill="#B5A89A"/><path d="M10 6v8M6 10h8" stroke="#fff" stroke-width="2" stroke-linecap="round"/></svg>';
+  addTodayBtn.onclick=()=>addWorkTaskToToday(t.id, t.name);
 
     const completeBtn=document.createElement('button');
     completeBtn.className='task-icon-btn complete';
@@ -1072,8 +1079,9 @@ function renderTasks(){
     delBtn.innerHTML='<svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="6" y="8" width="8" height="8" rx="2" fill="#E07A5F"/><rect x="9" y="11" width="2" height="3" rx="1" fill="#fff"/><rect x="8" y="4" width="4" height="2" rx="1" fill="#2B2C29"/></svg>';
     delBtn.onclick=()=>deleteTask(t.id);
 
-    // Order for 2x2 grid
-    actionsCell.appendChild(completeBtn);
+  // Order for 2x2 grid (addToToday first)
+  actionsCell.appendChild(addTodayBtn);
+  actionsCell.appendChild(completeBtn);
     actionsCell.appendChild(editBtn);
     actionsCell.appendChild(subBtn);
     actionsCell.appendChild(delBtn);
@@ -1110,6 +1118,26 @@ function renderTasks(){
   }
   
   renderCalendarTasks();
+}
+
+// Add-to-Today API call for Work tasks
+async function addWorkTaskToToday(taskId, taskName){
+  try{
+    const res = await fetch('/api/add-to-today',{
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body: JSON.stringify({ taskType: 'work', taskId, taskName })
+    });
+    if(res.ok){
+      // Optional toast/alert
+      console.log(`Added to Today: ${taskName}`);
+    }else{
+      alert('Failed to add to Today');
+    }
+  }catch(e){
+    console.error('Error adding to Today', e);
+    alert('Error adding to Today');
+  }
 }
 
 function renderCalendarTasks(){
